using LRU cache in DNS resolver, added dependency to github.com/cloudflare/golibs/lrucache

--- a/glide.yaml
+++ b/glide.yaml
@@ -3,3 +3,6 @@ import:
 - package: github.com/miekg/dns
   subpackages:
   - github.com\miekg\dns
+- package: github.com/cloudflare/golibs
+  subpackages:
+  - lrucache
